[project]
name = "one"
version = "0.1.0"
description = """
one aims at seamless integration of robot motion planning and learning,
with a strong emphasis on simplicity, consistency, and controllability.

The framework only depends on MuJoCo and does not rely on external collision libraries.
For kinematic planning, collision checking is performed using MuJoCo’s native pipeline
(mj_kinematics + mj_collision). For dynamic simulation, MuJoCo’s standard time stepping
(mj_step) is used directly.

Visualization is implemented from scratch on top of pyglet, providing full control
from low-level rendering primitives such as device buffers, shaders, and render passes
to high-level abstractions including scenes, kinematic chains, and articulated mechanisms.

The internal data structures are designed to be compatible with both URDF and MJCF XML
descriptions, enabling unified handling of robot models across different representations
without forcing premature conversions.

Overall, one is intended as a lightweight yet expressive research framework for studying
motion planning, learning, and their interaction under a single, coherent simulation backend.
"""
authors = [
  {name = "wanweiwei", email = "wanweiwei07@gmail.com"},
  {name = "harutonagai", email = "nagai@hlab.sys.es.osaka-u.ac.jp"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pyglet",
    "mujoco",
    "matplotlib",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
pytorch = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "torchaudio==2.10.0",
  "torch-geometric>=2.6.1",
  "vit-pytorch>=1.16.5",
  "linformer>=0.2.3",
  "wandb>=0.18.0",
  "transformers>=4.56.0",
]
vision = [
  "opencv-python>=4.8",
  "pillow>=11.3.0",
  "pandas>=2.0",
  "scikit-learn>=1.3.2",
]

[tool.setuptools.packages]
find = { where = ["."], include = ["one", "one_assembly"]}

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
